<resources>
    var Nombre :string ="SiguaTaxi"
    <string name="app_name">SiguaTaxi</string>
    <string name="titulo_inicio">Inicio de sesión</string>
    <!-- Strings relacionados con el login-->
    <string name="correo">Correo usuario</string>
    <string name="contraseña">Contraseña</string>
    <string name="registro">No tienes una cuenta? Inicia aquí</string>
    <string name="inicioA">Iniciar</string>
    <string name="correo_invalido">El correo electronico es invalido</string>
    <string name="contraseña_corta">La contraseña es muy corta</string>
    <string name="contraseña_incorrecta">La contraseña es incorrecta</string>
    <string name="campo_requerido">Este campo es requerido</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="registroA">Registro de usuario</string>
    <string name="google">Facebook</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="ultimos">Ultimos mensajes..</string>
    <string name="nombres">Nombre Usuario</string>
    <string name="apellidos">Tomar Foto</string>
    <string name="confirmar_contraseña">Confirmar contraseña</string>
    <string name="numero_telefono">Número de teléfono</string>
    <string name="registro_inicio">Ya tienes una cuenta? Inicia aquí</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="taxista">Taxista</string>
    <string name="usuarioN">Usuario</string>

    <string name="registroV">Registro del vehículo</string>
    <string name="marca">Marca del vehicúlo</string>
    <string name="modelo">Modelo del Vehicúlo</string>
    <string name="numeroP">Número de placa</string>
    <string name="numeroT">Número de taxi</string>
    <string name="siguiente">Siguiente</string>
    <string name="tomar">Tomar foto</string>
    <string name="galeria">Galeria</string>
    <string name="registro_foto">Foto conductor</string>
    <string name="foto">Foto</string>
    <string name="title_activity_mapa_taxi">Map</string>
    <string name="limpiar">Limpiar</string>
    <string name="enviar">Enviar</string>

    <string name="title_activity_menu">SiguaTaxi</string>
    <string name="navigation_drawer_open">Abrir navegación</string>
    <string name="navigation_drawer_close">Cerrar navegación</string>
    <string name="nav_header_title">SiguaTaxi</string>
    <string name="nav_header_subtitle">eduardocalix11xtra@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Configuraciones</string>
    <string name="quienes_somos">¿Quienes Somos?</string>
    <string name="cerrar">Cerrar Sesión</string>
    <string name="mostrar">Mostrar</string>
    <string name="horarios">Horarios</string>
    <string name="acerca">Acerca de</string>
    <string name="inicio">Inicio</string>
    <string name="pedir_taxi">Pedir Taxi</string>

    <string name="nosotros">¿Quienes Somos?</string>
    <string name="vision">Visión</string>
    <string name="mision">Misión</string>
    <string name="vision_texto">Consolidarnos como la empresa líder en la prestación del servicio de SiguaTaxi en el
        casco urbano de Siguatepeque así como la empresa líder en la ciudad ofreciendo los más altos índices de
        seguridad poniendo un énfasis especial en la profesionalización de nuestro personal y un excelente sistema de
        información.
    </string>
    <string name="mision_texto">"SiguaTaxi" garantiza una atención personalizada para nuestros clientes, mediante la
        prestación de servicio de transporte de taxi contando con conductores confiables y responsables, comprometidos
        en brindarle tranquilidad seguridad y confort en el transcurso de su servicio y de esta manera ofrecer las
        mejores oportunidades de movilización en la ciudad de Siguatepeque.
    </string>
    <string name="nombreTaxista">Nombre</string>
    <string name="telefonoTaxista">Telefono</string>
    <string name="usuarioCreado">Usuario creado correctamente</string>
    <string name="nuevo_mensaje">Nuevo Mensaje</string>
    <string name="escribir">Escribir un mensaje..</string>
    <string name="calificar">Calificar Usuario</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Tipo</string>

</resources>
