<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_inicio"
                android:icon="@android:drawable/ic_menu_sort_by_size"
                android:title="@string/inicio"/>
        <item
                android:id="@+id/nav_pedir"
                android:icon="@android:drawable/ic_menu_call"
                android:title="@string/pedir_taxi"/>
        <item
                android:id="@+id/nav_mostrar"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/mostrar"/>
        <item
                android:id="@+id/nav_cerrar"
                android:icon="@android:drawable/ic_lock_power_off"
                android:title="@string/cerrar"/>
    </group>

    <item android:title="@string/acerca">
        <menu>
            <item
                    android:id="@+id/nav_horarios"
                    android:icon="@android:drawable/ic_menu_my_calendar"
                    android:title="@string/horarios"/>
            <item
                    android:id="@+id/nav_nosotros"
                    android:icon="@android:drawable/ic_menu_info_details"
                    android:title="@string/quienes_somos"/>
        </menu>
    </item>

</menu>
