<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:id="@+id/layoutRegistro"
                                             android:background="@drawable/dos">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="653dp" android:paddingTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="4dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">
        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="200dp" android:layout_margin="10dp" tools:layout_editor_absoluteY="15dp"
                tools:layout_editor_absoluteX="15dp">

            <TextView
                    android:text="@string/registro_foto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/tvtomar"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="4dp"
                    android:textSize="20sp" app:layout_constraintStart_toEndOf="@+id/imFoto"
                    android:layout_marginStart="8dp" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="parent"
                    android:textColor="@color/design_default_color_primary_dark"/>
            <Button
                    android:text="@string/galeria"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content" android:id="@+id/galeria"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="4dp" app:layout_constraintStart_toEndOf="@+id/imFoto"
                    android:layout_marginStart="4dp" android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/tvtomar"/>
            <Button
                    android:text="@string/tomar"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content" android:id="@+id/tomaFoto"
                    app:layout_constraintStart_toEndOf="@+id/imFoto"
                    android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/galeria"/>
            <ImageView
                    android:layout_width="176dp"
                    android:layout_height="176dp" tools:srcCompat="@tools:sample/avatars"
                    android:id="@+id/imFoto"
                    android:layout_marginTop="20dp"
                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent" android:contentDescription="@string/foto"/>
        </android.support.constraint.ConstraintLayout>
        <TextView
                android:text="@string/registroV"
                android:layout_width="match_parent"
                android:layout_height="50dp" android:id="@+id/tvRegistros" android:textSize="36sp"
                android:textStyle="bold" android:textAlignment="center" android:fontFamily="@font/roboto_bold"
                android:textColor="@android:color/white"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:ems="10"
                android:id="@+id/etMarca" android:hint="@string/marca"
                android:layout_margin="10dp" android:textColorHint="@color/design_default_color_primary_dark"
                android:importantForAutofill="no"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textFilter|text"
                android:ems="10"
                android:id="@+id/etModelo" android:hint="@string/modelo" android:layout_margin="10dp"
                android:textColorHint="@color/design_default_color_primary_dark" android:importantForAutofill="no"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/etPlaca" android:inputType="textFilter|text" android:hint="@string/numeroP"
                android:layout_margin="10dp" android:textColorHint="@color/design_default_color_primary_dark"
                android:importantForAutofill="no"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/etNumeroTaxi" android:layout_margin="15dp" android:hint="@string/numeroT"
                android:textColorHint="@color/design_default_color_primary_dark" android:importantForAutofill="no"/>
        <Button
                android:text="@string/crear_cuenta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/btnCuentaV"
                android:background="@drawable/login_button" android:layout_margin="15dp"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>