<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/dos"
        tools:context=".UsuariosActivity">
    <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="365dp"
            android:layout_height="716dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp" android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" android:layout_marginBottom="8dp">


        <TextView
                android:id="@+id/tvRegistro1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/registroA"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="30sp" android:paddingTop="29dp" android:layout_margin="6dp"
                android:layout_marginTop="10dp"/>

        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/fotoAlmacen">


            <Button
                    android:text="@string/apellidos"
                    android:layout_width="150dp"
                    android:layout_height="150dp" tools:layout_marginEnd="8dp"
                    android:background="@drawable/forma_botton"

                    android:textColor="@color/common_google_signin_btn_text_light_default"

                    android:id="@+id/seleccionarfotoboton"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"/>
            <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/selectphoto_imageview_register"
                    app:civ_border_width="4dp"
                    android:layout_width="150dp"
                    android:layout_height="150dp" app:layout_constraintEnd_toEndOf="@+id/seleccionarfotoboton"
                    app:layout_constraintStart_toStartOf="@+id/seleccionarfotoboton"
                    app:layout_constraintTop_toTopOf="@+id/seleccionarfotoboton"
                    app:layout_constraintBottom_toBottomOf="@+id/seleccionarfotoboton"/>

        </android.support.constraint.ConstraintLayout>


        <EditText
                android:id="@+id/etNombre"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:layout_margin="6dp"
                android:drawablePadding="10dp"
                android:hint="@string/nombres"
                android:textColorHint="@color/design_default_color_primary_dark" android:inputType="textPersonName"
                android:textColor="@color/design_default_color_primary_dark"
        />

        <EditText
                android:id="@+id/etCorreo"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:layout_margin="6dp"
                android:drawablePadding="6dp"
                android:hint="@string/correo"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/design_default_color_primary_dark"
                android:textColor="@color/design_default_color_primary_dark"
                android:textColorLink="@color/design_default_color_primary_dark"
        />
        <EditText
                android:id="@+id/etContrasena"
                android:layout_width="match_parent"
                android:layout_height="41dp"
                android:layout_margin="6dp"
                android:drawablePadding="6dp"
                android:hint="@string/contraseña"
                android:inputType="textPassword"
                android:textColorHint="@color/design_default_color_primary_dark"
                android:textColor="@color/design_default_color_primary_dark"
        />

        <EditText
                android:id="@+id/etTelefono"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:layout_margin="6dp"
                android:drawablePadding="6dp"
                android:hint="@string/numero_telefono"
                android:inputType="number|phone"
                android:textColorHint="@color/design_default_color_primary_dark"
                android:textColor="@color/design_default_color_primary_dark"
        />
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="49dp" android:id="@+id/grupo">
            <RadioButton
                    android:text="@string/taxista"
                    android:layout_width="10dp"
                    android:layout_height="wrap_content" android:id="@+id/rbTaxi" android:layout_weight="1"
                    android:textColor="@color/design_default_color_primary_dark" android:paddingStart="15dp"
                    android:layout_marginStart="10dp" android:textSize="22sp" android:paddingEnd="5dp"/>
            <RadioButton
                    android:text="@string/usuarioN"
                    android:layout_width="6dp"
                    android:layout_height="wrap_content" android:id="@+id/rbUsuario" android:layout_weight="1"
                    android:textColor="@color/design_default_color_primary_dark" android:paddingStart="10dp"
                    android:layout_marginLeft="10dp" android:layout_marginRight="10dp" android:textSize="22sp"
                    android:paddingEnd="5dp"/>
        </LinearLayout>
        <TextView
                android:id="@+id/tvLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/registro_inicio"
                android:textAlignment="center"
                android:textColor="@color/design_default_color_primary_dark"
                android:textSize="20sp"/>
        <ProgressBar
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:indeterminate="true"
                android:id="@+id/ProgressBar2"/>
        <Button

                android:id="@+id/btncuenta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@drawable/login_button"
                android:text="@string/crear_cuenta"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>