<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content" android:clickable="true"
              android:background="?attr/selectableItemBackground" android:focusable="true">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:layout_marginBottom="8dp">
        <ImageView
                android:layout_width="173dp"
                android:layout_height="215dp" app:srcCompat="@drawable/taxi1" android:id="@+id/ivTaxista"
                android:layout_marginTop="8dp" android:contentDescription="@string/foto" android:padding="10dp"/>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:padding="10dp">
            <TextView
                    android:text="@string/nombreTaxista"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/tvNombre"
                    android:textSize="12sp" android:layout_marginEnd="16dp" android:layout_marginStart="16dp"
                    android:layout_marginTop="29dp" android:textColor="@color/colorPrimary"/>
            <TextView
                    android:text="@string/telefonoTaxista"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/tvTelefono"
                    android:textSize="12sp" android:layout_marginEnd="16dp" android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp" android:textColor="@color/colorPrimary"/>
            <TextView
                    android:text="@string/numeroT"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/tvNumeroTaxi"
                    android:textSize="12sp" android:layout_marginEnd="16dp" android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp" android:textColor="@color/colorPrimary"/>
            <TextView
                    android:text="@string/numeroP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/tvNumeroPlaca"
                    android:textSize="12sp" android:layout_marginEnd="16dp" android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp" android:textColor="@color/colorPrimary"/>
            <RatingBar
                    android:layout_width="match_parent"
                    android:layout_height="0dp" android:id="@+id/rbPuntuacion1" android:layout_weight="0"
                    android:numStars="5" android:rating="3.5"
                    android:layout_margin="10dp" android:stepSize="5" android:minWidth="20dp" android:minHeight="20dp"
                    android:isIndicator="false"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>