<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".NosotrosActivity" android:background="@drawable/dos"
        android:padding="15dp">

    <TextView
            android:text="@string/nosotros"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/tvQuien"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:textSize="36sp"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="28dp" android:layout_alignParentTop="true" android:layout_alignParentEnd="true"
            android:layout_marginEnd="71dp" android:layout_alignParentStart="true" android:layout_marginStart="71dp"
            android:visibility="visible" app:layout_constraintHorizontal_bias="0.529" android:textStyle="bold"/>
    <TextView
            android:text="@string/vision"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/tvVision" android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:textColor="@color/design_default_color_primary_dark"
            android:layout_marginTop="52dp"
            app:layout_constraintTop_toBottomOf="@+id/tvQuien" android:layout_marginStart="36dp"
            app:layout_constraintStart_toStartOf="parent" android:textSize="18sp" android:textStyle="bold"/>
    <TextView
            android:text="@string/vision_texto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView3"
            android:layout_alignParentTop="true" android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true" android:textSize="12sp"
            android:textColor="@color/design_default_color_primary_dark"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/tvVision" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" android:padding="15dp" android:textStyle="bold"/>
    <TextView
            android:text="@string/mision"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/tvMision" android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:textColor="@color/design_default_color_primary_dark"
            android:layout_marginTop="36dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3" android:layout_marginStart="32dp"
            app:layout_constraintStart_toStartOf="parent" android:textSize="18sp" android:textStyle="bold"/>
    <TextView
            android:text="@string/mision_texto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView4"
            android:layout_alignParentTop="true" android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true" android:textSize="12sp"
            android:textColor="@color/design_default_color_primary_dark"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/tvMision" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" android:padding="15dp" android:textStyle="bold"/>
</android.support.constraint.ConstraintLayout>